# nf

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  example.cpp  example2.cpp  master-example.cpp  msgs-write-example.cpp  parse-example.cpp  slave-example.cpp  write-example.cpp
include/nfv2/: address.hpp  client.hpp  code.hpp  command.hpp  crc.hpp  frame-parser.hpp  frame.hpp  id.hpp  master.hpp  message.hpp  nfv2.hpp  reply.hpp  request-handler.hpp  request.hpp  slave-endpoint.hpp  slave-instance.hpp  slave.hpp
include/nfv2/checksum/: CrcInitTable_8_D8.hpp  Crc_8_D8.hpp
include/nfv2/client/: AllInputMessages.hpp  GetDriveCurrentAns.hpp  GetDriveCurrentCmd.hpp  GetDrivePositionAns.hpp  GetDrivePositionCmd.hpp  GetDriveStatusAns.hpp  GetDriveStatusCmd.hpp  ProtocolStack.hpp  SetDriveMaxCurrentCmd.hpp  SetDriveMiscCmd.hpp  SetDriveModeCmd.hpp  SetDrivePWMCmd.hpp
include/nfv2/cmds/: cmds.hpp  set-drives-current-cmd.hpp  set-drives-mode-cmd.hpp  set-drives-position-cmd.hpp  set-drives-speed-cmd.hpp
include/nfv2/common/: AnswerExtraOptions.hpp  CommandExtraOptions.hpp  DriveMode.hpp  Field.hpp  Message.hpp  MessageExtraOptions.hpp  MessageMode.hpp  MsgId.hpp  SetterExtraOptions.hpp
include/nfv2/field/: AddressField.hpp  ChecksumField.hpp  DriveCurrentField.hpp  DriveMiscField.hpp  DriveModeField.hpp  DrivePWMField.hpp  DrivePositionField.hpp  DriveStatusField.hpp  MsgDataSizeField.hpp  MsgIdField.hpp  MsgSizeField.hpp  PWMField.hpp  SyncField.hpp
include/nfv2/msg/: GetDriveCurrentAnsBase.hpp  GetDriveCurrentCmdBase.hpp  GetDrivePositionAnsBase.hpp  GetDrivePositionCmdBase.hpp  GetDriveStatusAnsBase.hpp  GetDriveStatusCmdBase.hpp  SetDriveMaxCurrentCmdBase.hpp  SetDriveMiscCmdBase.hpp  SetDriveModeCmdBase.hpp  SetDrivePWMCmdBase.hpp
include/nfv2/msgs/: drives-mode.hpp  msgs.hpp  read-drive-current.hpp  read-drive-position.hpp  read-drive-status.hpp  set-drive-max-current.hpp  set-drive-misc.hpp  set-drive-mode.hpp  set-drive-pwm.hpp  types.hpp
include/nfv2/protocol/: AddressLayerBase.hpp  ChecksumLayerBase.hpp  MsgDataLayer.hpp  MsgDataSizeLayer.hpp  MsgIdLayerBase.hpp  MsgSizeLayerBase.hpp  ProtocolStackBase.hpp  SyncPrefixLayerBase.hpp
src/: CMakeLists.txt  command.cpp  crc.cpp  frame-parser.cpp  frame.cpp  master.cpp  request-handler.cpp  request.cpp  slave-endpoint.cpp  slave-instance.cpp
src/cmds/: CMakeLists.txt  set-drives-mode-cmd.cpp
test/: CMakeLists.txt  address-test.cpp  crc-test.cpp  id-test.cpp  message-test.cpp
trunc/examples/: CMakeLists.txt  comms.cpp  comms2.cpp  comms3.cpp  parse-example.cpp  write-example.cpp
trunc/include/nfv2/: address.hpp
trunc/include/nfv2/msgs/: read-drive-current.hpp  read-drive-position.hpp  set-drive-max-current.hpp  set-drive-pwm.hpp
trunc/src/: CMakeLists.txt  crc.cpp  frame-parser.cpp  frame.cpp
